<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortifolioMainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
    android:layout_margin="5dp"
        android:background="@color/dark"
        android:id="@+id/textView"
        android:text="@string/lable" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cat"
        android:background="@color/orange"
        android:layout_margin="5dp"
        android:onClick="handButtonClickEvents"
        android:id="@+id/btn_cat" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="5dp"
            android:text="@string/thing1"
            android:onClick="handButtonClickEvents"
            android:id="@+id/btn_thing1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/thing2"
            android:id="@+id/btn_thing2"
            android:background="@color/orange"
            android:onClick="handButtonClickEvents"/>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amajigger"
        android:id="@+id/btn_amajigger"
        android:layout_margin="5dp"
        android:background="@color/orange"
        android:onClick="handButtonClickEvents"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sally"
        android:id="@+id/btn_sally"
        android:layout_margin="5dp"
        android:background="@color/orange"
        android:onClick="handButtonClickEvents"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nick"
        android:id="@+id/btn_nick"
        android:layout_margin="5dp"
        android:background="@color/orange"
        android:onClick="handButtonClickEvents"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dr_seuss"
        android:id="@+id/btn_dr_seuss"
        android:background="@color/red"
        android:onClick="handButtonClickEvents"/>

</LinearLayout>
